2010-09-05  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-start.el (gnus-activate-group): Take an optional parameter to
	say that you don't want to call gnus-request-group with don-check, but
	do check the reponse.  This is for virtual groups only.
	(gnus-get-unread-articles): Count the archive groups as secondary, so
	that they're activated the same way as before.

	* imap.el (imap-message-map): Removed optional buffer parameter, since
	no callers use it.
	(imap-message-get): Ditto.
	(imap-message-put): Ditto.
	(imap-mailbox-map): Ditto.
	(imap-mailbox-put): Ditto.
	(imap-mailbox-get): Ditto.
	(imap-mailbox-get): Revert last change for this function.

	* nnimap.el (nnimap-request-list): Servers may return \NoSelect
	case-insensitively.
	(nnimap-debug): Removed.

	* imap.el (imap-fetch-safe): Removed function, and altered all callers
	to use `imap-fetch' instead.  According to the comments, this should be
	safe, since all other IMAP clients use the 1:* syntax.
	(imap-enable-exchange-bug-workaround): Removed.
	(imap-debug): Removed -- doesn't seem very useful.

	* mail-source.el (mail-source-fetch): Don't message if we're fetching
	mail from a file, and the file doesn't exist.

	* imap.el (imap-log): New convenience function used throughout instead
	of repeating the same code all over the place.

	* pop3.el (pop3-streaming-movemail): Return t for success.

	* nnimap.el (nnimap-open-connection): Look for the "imaps" entry in the
	.authinfo if we're using ssl connection.

	* nnvirtual.el (nnvirtual-create-mapping): Use the active info we
	already have if we're in a main Gnus `g' run.

	* gnus-start.el (gnus-method-rank): Get info for virtual groups last.

2010-09-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-start.el (gnus-method-rank): Replace equalp with equal.

	* nnmh.el (nnmh-request-list-1): Bind `file'.

	* pop3.el (pop3-set-process-query-on-exit-flag): New function that's an
	alias to set-process-query-on-exit-flag or process-kill-without-query.